Adding favicon which improves load time.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Teleport</title>
     <link type="text/css" rel="stylesheet" href="resources/css/style.css"/>
+    <link rel="icon" type="image/png" href="resources/images/favicon.ico"/>
     <script type="text/javascript" src="packages/teleport.js"></script>
     <script type="text/javascript">require.main('teleport/webapp')</script>
   </head>
