Changing demo app in a way that all content is loaded on demand parsed and injected to the dom.

--- a/index.html
+++ b/index.html
@@ -13,9 +13,36 @@
     <div class="ribbon">
       <a target="_blank" href="https://github.com/Gozala/teleport">Fork me on GitHub</a>
     </div>
-    <h1 class="fixed">telep<img class="logo" src="resources/images/logo.png"/>rt</h1>
-    <section id="intro"></section>
-    <section id="install"><section>
-    <section id="guide"></section>
+    <!--
+    <h1>telep<img class="logo" src="resources/images/logo.png"/>rt</h1>    
+    -->
+
+    <section>
+      <header><h1>Teleport</h1></header>
+      <article class="visible">
+    With a CommonJS we finally have interoperable modules, that can be loaded
+    on variety of platforms. With help of awesome npm we can manage different
+    JavaScript libraries without needs of visiting websites or manually
+    downloading anything. Can't we have the same experience with browsers side
+    development ?
+
+    That's exactly what teleport is about!
+      </article>
+    </section>
+    <section>
+      <header><a href="#intro">Synopsis</a></header>
+      <article id="intro">
+        bla sbsaouaou aoeu aoe
+        aoeu ao
+      </article>
+    </section>
+    <section>
+      <header><a href="#install">Installing</a></header>
+      <article id="install"></article>
+    </section>
+    <section>
+      <header><a href="#guide">Guide</a></header>
+      <article id="guide"></article>
+    </section>
   </body>
 </html>
