Updating html and improving teleport description.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Teleport</title>
     <link type="text/css" rel="stylesheet" href="resources/css/style.css"/>
+    <link type="text/css" rel="stylesheet" href="resources/css/code.css"/>
     <link rel="icon" type="image/png" href="resources/images/favicon.ico"/>
     <script type="text/javascript" src="packages/teleport.js"></script>
     <script type="text/javascript">require.main('teleport/webapp')</script>
@@ -13,28 +14,17 @@
     <div class="ribbon">
       <a target="_blank" href="https://github.com/Gozala/teleport">Fork me on GitHub</a>
     </div>
-    <!--
-    <h1>telep<img class="logo" src="resources/images/logo.png"/>rt</h1>    
-    -->
 
     <section>
       <header><h1>Teleport</h1></header>
       <article class="visible">
-    With a CommonJS we finally have interoperable modules, that can be loaded
-    on variety of platforms. With help of awesome npm we can manage different
-    JavaScript libraries without needs of visiting websites or manually
-    downloading anything. Can't we have the same experience with browsers side
-    development ?
-
-    That's exactly what teleport is about!
+        tool that enables you to write interoperable modules across server and
+        browser without any dependency hassles.
       </article>
     </section>
     <section>
       <header><a href="#intro">Synopsis</a></header>
-      <article id="intro">
-        bla sbsaouaou aoeu aoe
-        aoeu ao
-      </article>
+      <article id="intro"></article>
     </section>
     <section>
       <header><a href="#install">Installing</a></header>
