Improving descriptions on the page (Thanks for Sergi).

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <section>
       <header><h1>Teleport</h1></header>
       <article class="visible">
-        tool that enables you to write interoperable modules across server and
-        browser without any dependency hassles.
+      Tool to write interoperable JavaScript modules across server and browser
+      without any dependency hassles.
       </article>
     </section>
     <section>
