Switching 404 page to a new teleport loader url.

--- a/resources/pages/404.html
+++ b/resources/pages/404.html
@@ -6,7 +6,7 @@
     <title>Teleport Playground</title>
     <link rel="stylesheet" type="text/css" href="http://jeditoolkit.com/teleport/resources/css/style.css"/>
     <link rel="stylesheet" type="text/css" href="http://jeditoolkit.com/teleport/resources/css/code.css"/>
-    <script type="text/javascript" src="packages/teleport.js"></script>
+    <script type="text/javascript" src="packages/teleport/teleport.js"></script>
   </head>
   <body>
     <div class="ribbon"><a target="_blank" href="https://github.com/Gozala/teleport">Fork me on GitHub</a></div>
