--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
     <div class="ribbon">
       <a target="_blank" href="https://github.com/Gozala/teleport">Fork me on GitHub</a>
     </div>
-
+    <div id="app-view">
+      <section id='packages'></section>
+      <section id="package-details"></section>
+    <div>
+    <!--
     <section>
       <header><h1>Teleport</h1></header>
       <article class="visible">
@@ -33,5 +37,6 @@
       <header><a href="#guide">Guide</a></header>
       <article id="guide"></article>
     </section>
+    -->
   </body>
 </html>
