Moving style pointers to the local files instead of remote ones.

--- a/resources/pages/404.html
+++ b/resources/pages/404.html
@@ -4,8 +4,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title>Teleport Playground</title>
-    <link rel="stylesheet" type="text/css" href="http://jeditoolkit.com/teleport/resources/css/style.css"/>
-    <link rel="stylesheet" type="text/css" href="http://jeditoolkit.com/teleport/resources/css/code.css"/>
+    <link rel="stylesheet" type="text/css" href="packages/teleport/resources/css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="packages/teleport/resources/css/code.css"/>
     <script type="text/javascript" src="packages/teleport/teleport.js"></script>
   </head>
   <body>
