Switching to the newer version of teleport.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link type="text/css" rel="stylesheet" href="resources/css/style.css"/>
     <link type="text/css" rel="stylesheet" href="resources/css/code.css"/>
     <link rel="icon" type="image/png" href="resources/images/favicon.ico"/>
-    <script type="text/javascript" src="packages/teleport.js"></script>
-    <script type="text/javascript">require.main('teleport/webapp')</script>
+    <script type="text/javascript" src="support/teleport/teleport.js"></script>
+    <script type="text/javascript">require.main('teleport-site/app')</script>
   </head>
   <body>
     <div class="ribbon">
